- [M] arch/x86/include/asm/processor.h		[D] finally, pt_regs, thread_info, task ~~~~


Mon Feb 22 11:04:52 CST 2016
- [+] include/sandix/resource.h
- [+] include/sandix/threads.h			[D] put NR_CPUS here
- [+] kernel/cpu.c
- [+] arch/x86/include/asm/cpu.h		[D] online, active things
- [M] arch/x86/include/asm/cpumask.h
- [+] arch/x86/include/asm/smp.h		[D] smp processor id things
- [+] include/sandix/smp.h
- [+] kernel/sched.c				[D] switch_to things
- [+] include/asm-generic/switch_to.h
- [+] arch/x86/include/asm/switch_to.h
- [M] arch/x86/kernel/process_32.c
- [M] arch/x86/kernel/process_64.c


Tue Feb 23 12:48:24 CST 2016
- [+] arch/x86/include/asm/msr.h
- [+] arch/x86/kernel/cpu.c			[D] vendor-specific things
- [+] arch/x86/kernel/cpu_intel.c
- [+] kernel/resource.c
- [M] arch/x86/include/asm/asm.c		[D] cpuid wrappers
- [M] arch/x86/include/asm/processor.c		[D] struct cpu_dev
- [M] arch/x86/kernel/setup.c
- [M] include/sandix/bug.h			[D] BUILD_BUG_ON


Wed Feb 24 10:56:24 CST 2016
- [+] arch/x86/kernel/x86_init.c
- [+] arch/x86/include/asm/x86_init.h		[D] Add x86 init ops
- [M] arch/x86/include/asm/io.h			[D] Rewrite
- [M] arch/x86/include/asm/msr.h		[D] Add all ops
- [M] include/sandix/mm.h


Thu Feb 25 08:39:28 CST 2016
- [+] arch/x86/mm/fault.c			[D] Move page fault handler here
- [M] arch/x86/kernel/trap.c


Fri Feb 26 15:39:18 CST 2016
- [+] arch/x86/include/asm/apic.h
- [+] arch/x86/include/asm/fixmap.h		[D] FIXMAP, interesting!!!!
- [+] include/asm-generic/fixmap.h
- [+] arch/x86/mm/ioremap.c
- [+] arch/x86/mm/pgtable.c


Sat Feb 27 16:46:08 CST 2016
- [+] arch/x86/mm/init_32.c
- [M] arch/x86/include/asm/pgtable*.h		[D] Add various functions.
- [M] include/asm-generic/pgtable.h


Mon Feb 29 20:08:19 CST 2016
- [+] include/sandix/pfn.h			[D] Brand new
- [+] arch/x86/include/asm/pgalloc.h		[D] populate pte, pmd..
- [+] arch/x86/include/asm/mpspec.h		[D] find smp
- [M] arch/x86/mm/ioremap.c
- [M] lib/vsprintf.c				[D] %p