@@ -9,6 +9,7 @@ obj-y += dumpstack.o
 obj-y += x86_init.o
 obj-y += process.o process_$(BITS).o
 obj-y += cpu.o cpu_intel.o
+obj-y += mpspec.o
 
 # head file
 extra-y += head_$(BITS).o
