@@ -16,10 +16,4 @@
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#include <asm/x86_init.h>
 
-#include <sandix/compiler.h>
-
-struct x86_init_ops x86_init __initdata = {
-	
-};
